fix: light/dark mode sufficient contrasts

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -34,10 +34,17 @@
     font-weight: 500;
     color: var(--primary);
     text-decoration: inherit;
-  }
 
-  a:hover {
-    color: #535bf2;
+    svg {
+      fill: var(--primary);
+    }
+
+    &:hover {
+      color: var(--secondary);
+      svg {
+        fill: var(--secondary);
+      }
+    }
   }
 
   hr {
