--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,8 @@
   --background: #{$color-background-light};
   --foreground: #{$color-cod-gray};
   --primary: #{$color-royal-blue};
+  --secondary: #{$color-persian-blue};
+  --tertiary: #{$color-gray};
 
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-style: normal;
@@ -25,6 +27,12 @@ body {
   justify-content: center;
   min-height: 100vh;
   padding: 8rem 1.5rem;
+}
+
+@media (max-width: 550px) {
+  body {
+    padding: 5rem 1.5rem;
+  }
 }
 
 .text {
@@ -55,7 +63,7 @@ body {
   }
 
   &-gray {
-    color: $color-text-light;
+    color: var(--tertiary);
   }
 }
 
@@ -70,9 +78,12 @@ body {
   border: 0;
 }
 
-// @media (prefers-color-scheme: dark) {
-//   :root {
-//     --background: #{$color-background-dark};
-//     --foreground: #{$color-background-light};
-//   }
-// }
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: #{$color-background-dark};
+    --foreground: #{$color-background-light};
+    --primary: #{$color-malibu};
+    --secondary: #{$color-anakiwa};
+    --tertiary: #{$color-light-gray};
+  }
+}
